# typstyle

./: .gitignore  .gitmodules  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  justfile  mkdocs.yml  pyproject.toml
crates/typstyle/: Cargo.toml
crates/typstyle-consistency/: Cargo.toml
crates/typstyle-consistency/src/: cmp.rs  compile.rs  err.rs  harness.rs  lib.rs  universe.rs  world.rs
crates/typstyle-core/: Cargo.toml
crates/typstyle-core/benches/: pretty_print.rs
crates/typstyle-core/src/: attr.rs  cmplx.rs  config.rs  lib.rs  partial.rs  utils.rs
crates/typstyle-core/src/liteval/: mod.rs
crates/typstyle-core/src/pretty/: args.rs  chain.rs  code_chain.rs  code_flow.rs  code_list.rs  code_misc.rs  comment.rs  config.rs  context.rs  doc_ext.rs  flow.rs  func_call.rs  import.rs  list.rs  markup.rs  math.rs  math_align.rs  mod.rs  mode.rs  parened_expr.rs  prelude.rs  style.rs  table.rs  text.rs  util.rs
crates/typstyle-core/src/prettyless/: mod.rs  render.rs
crates/typstyle-typlugin/: Cargo.toml  README.md
crates/typstyle-typlugin/src/: lib.rs
crates/typstyle-wasm/: Cargo.toml  build.rs
crates/typstyle-wasm/src/: lib.rs
crates/typstyle/src/: cli.rs  fmt.rs  fs.rs  logging.rs  main.rs
crates/typstyle/tests/: common.rs  test_format.rs  test_format_all.rs  test_format_stdin.rs  test_style_args.rs
tests/: Cargo.toml  assets.rs  repo-e2e.rs
tests/assets/: book.typ  code.typ  huge-math.typ  serve.typ  undergraduate-math.typ
tests/assets/typstfmt/: 102-non-converge-math-mat.typ  113-math-indent.typ  136-raw.typ  139-block-comment.typ  148-broken-input.typ  160-fletcher.typ  80-func-call-with-label.typ  82-non-converge-list.typ  84-ws-text-code.typ  88-markup-hardline.typ  93-math-stop.typ  96-destruct-comma.typ
tests/assets/unit/: array.typ  destruction.typ  escape.typ  import.typ  windows.typ
tests/assets/unit/code/: arg-flavor.typ  binary-op-array.typ  chained-call-compilable.typ  chained-call.typ  cond.typ  context.typ  dict-special.typ  dot-chain.typ  equation-dot-chain.typ  extra-paren.typ  for-loop-line-break.typ  func-call-flavor.typ  func-call-last-arg.typ  if-chain.typ  if-while-else.typ  import-items.typ  include.typ  let-closure.typ  multiline-string.typ  param-len.typ  perf-nest.typ  short-block-with-comment.typ  short-block.typ  short-if.typ  single-arg-closure.typ  single-elem-destruct.typ
tests/assets/unit/comment/: block-comment.typ  comment-convergence.typ  comment-in-array.typ  comment-in-chain-binary.typ  comment-in-chain-call.typ  comment-in-closure.typ  comment-in-code.typ  comment-in-destruct.typ  comment-in-dict.typ  comment-in-for.typ  comment-in-func-call.typ  comment-in-if.typ  comment-in-import.typ  comment-in-showset.typ  consecutive-comment.typ  line-comment.typ
tests/assets/unit/func/: func_call.typ  spread.typ
tests/assets/unit/grid/: basic-cmt.typ  basic.typ  cell-ugly.typ  extra-arg.typ  large-cell.typ
tests/assets/unit/markup/: code-inside-content.typ  content-multiline.typ  content-par-break.typ  content-space.typ  enum.typ  heading.typ  inline-block-raw.typ  list-multiline.typ  list.typ  multi-tick-raw.typ  raw-in-funccall.typ  raw.typ  strong-multiline.typ  strong.typ  term-multiline.typ
tests/assets/unit/math/: 2dmat.typ  equation-flavor.typ  fn-comma.typ  frac.typ  long.typ  math-call-chain.typ  multi-char-var.typ  multiline-inline-math.typ  multiline-math.typ  primes.typ  var-in-math.typ
tests/assets/unit/off/: code-block.typ  content-func-call.typ
tests/assets/unit/op/: binary.typ
tests/assets/unit/show/: show-set.typ
tests/assets/unit/whitespace/: ws-in-array.typ
tests/fixtures/: e2e-repos.toml
tests/fixtures/ai/: README.md
tests/fixtures/ai/basic/: academic.typ  basic.typ  cookbook.typ  mathematics.typ  presentation.typ  (+1 more)
tests/fixtures/articles/: _cpe.typ  physics-experiment.typ  undergraduate-math.typ
tests/fixtures/partial/: erroneous.typ  indenta.typ
tests/fixtures/typstfmt/: 100-email.typ  113-math-indent.typ  124-block-comment.typ  137-math-align-panic.typ  138-non-converge-block-comment.typ  160-fletcher.typ  82-non-converge-list.typ  85-ws-quote.typ  95-space-before-math.typ
tests/snapshots/: assets__check_file@articles-book.typ-0.snap  assets__check_file@articles-undergraduate-math.typ-0.snap  assets__check_file@articles-undergraduate-math.typ-120.snap  assets__check_file@articles-undergraduate-math.typ-40.snap  assets__check_file@binary.typ-120.snap  assets__check_file@binary.typ-40.snap  assets__check_file@block-comment.typ-120.snap  assets__check_file@block-comment.typ-40.snap  assets__check_file@block-comment.typ-80.snap  assets__check_file@book.typ-0.snap  assets__check_file@book.typ-120.snap  assets__check_file@book.typ-40.snap  assets__check_file@book.typ-80.snap  assets__check_file@cetz-manual.typ-0.snap  assets__check_file@cetz-manual.typ-120.snap  assets__check_file@cetz-manual.typ-40.snap  assets__check_file@cetz-manual.typ-80.snap  assets__check_file@cetz-tree.typ-0.snap  assets__check_file@cetz-tree.typ-120.snap  assets__check_file@cetz-tree.typ-40.snap  assets__check_file@cetz-tree.typ-80.snap  assets__check_file@code-show-closure.typ-80.snap  assets__check_file@code.typ-120.snap  assets__check_file@content.typ-0.snap  assets__check_file@content.typ-120.snap  assets__check_file@content.typ-40.snap  assets__check_file@content.typ-80.snap  assets__check_file@frac.typ-80.snap  assets__check_file@huge-math.typ-0.snap  assets__check_file@huge-math.typ-120.snap  assets__check_file@huge-math.typ-40.snap  assets__check_file@huge-math.typ-80.snap  assets__check_file@line-comment.typ-80.snap  assets__check_file@packages-cetz-manual.typ-0.snap  assets__check_file@packages-cetz-manual.typ-120.snap  assets__check_file@packages-cetz-tree.typ-120.snap  assets__check_file@packages-cetz-tree.typ-40.snap  assets__check_file@packages-cetz-tree.typ-80.snap  assets__check_file@packages-codly.typ-0.snap  assets__check_file@packages-codly.typ-120.snap  (+574 more)
tests/src/: assets.rs  common.rs  partial.rs  repo-e2e.rs  tests.rs  unit.rs
(+1007 files in other folders)
