[workspace]
resolver = "2"
members = ["crates/*", "tests"]
default-members = ["crates/typstyle"]

[workspace.package]
version = "0.12.12"
rust-version = "1.80"
edition = "2021"
authors = ["Wenzhuo Liu"]
description = "Beautiful and reliable typst code formatter"
license = "Apache-2.0"
repository = "https://github.com/Enter-tainer/typstyle"
homepage = "https://enter-tainer.github.io/typstyle/"

[workspace.dependencies]
typstyle-core = { path = "crates/typstyle-core", version = "0.12.12" }
typstyle = { path = "crates/typstyle", version = "0.12.12" }
typstyle-consistency = { path = "crates/typstyle-consistency" }

# Used in core
typst-syntax = "0.12.0"

ecow = "0.2.3"
itertools = "0.13.0"
pretty = "0.12.3"
rustc-hash = "2.0"
wasm-bindgen = { version = "0.2" }

# Use in CLI
anyhow = "1"
clap = { version = "4.5.20", features = ["derive", "env"] }
clap_complete = { version = "4.5.36" }
walkdir = { version = "2" }

log = "0.4"
anstream = "0.6"
colored = "2.2"

# Used in tests
insta = { version = "1.41.1" }
libtest-mimic = "0.8.1"
pathdiff = "0.2.2"
pretty_assertions = "1.4.1"
# reflexo-typst-shim = { version = "0.5.0", default-features = false, features = [] }
reflexo-world = { version = "0.5.0", default-features = false, features = [
  "system",
] }
# reflexo-vfs = { version = "0.5.0", default-features = false, features = ["system"] }
reflexo-typst = { version = "0.5.0", default-features = false, features = [
  "system",
  "no-content-hint",
] }
# reflexo = { version = "0.5.0", default-features = false, features = ["typst"] }
typst-assets = { version = "0.12.0", features = ["fonts"] }
typst-render = "0.12.0"
typst-pdf = "0.12.0"
typst = "0.12.0"

# Used in benchmark
criterion = { version = "0.5" }

# Build
vergen = { version = "9.0", features = ["build", "cargo", "rustc"] }
vergen-gitcl = { version = "1.0" }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.test]
opt-level = 3

[profile.ci]
inherits = "release"
debug = true
