[workspace]
resolver = "2"
members = ["crates/*", "tests"]
default-members = ["crates/typstyle"]

[workspace.package]
version = "0.13.11"
rust-version = "1.83"
edition = "2021"
authors = ["Wenzhuo Liu"]
description = "Beautiful and reliable typst code formatter"
license = "Apache-2.0"
repository = "https://github.com/typstyle-rs/typstyle"
homepage = "https://typstyle-rs.github.io/typstyle/"

[workspace.dependencies]
typstyle-core = { path = "crates/typstyle-core", version = "0.13.11" }
typstyle = { path = "crates/typstyle", version = "0.13.11" }
typstyle-wasm = { path = "crates/typstyle-wasm", version = "0.13.11" }
typstyle-consistency = { path = "crates/typstyle-consistency" }

# Used in core
typst-syntax = "0.13.1"

ecow = "0.2.3"
itertools = "0.14"
pretty = "0.12.4"
rustc-hash = "2.0"
serde = "1.0"
smallvec = "1"
thiserror = "2"
unicode-width = "0.1" # use the same version as in pretty

# Used in WASM
console_error_panic_hook = "0.1.7"
js-sys = "0.3.77"
serde_json = "1.0"
serde-wasm-bindgen = "0.6.5"
syn = { version = "2.0", default-features = false }
wasm-bindgen = "0.2.100"

# Used in CLI
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = { version = "4.5" }
path-absolutize = "3"
walkdir = { version = "2" }

log = "0.4"
anstream = "0.6"
colored = "3.0"

# Used in tests
console = { version = "*", default-features = false }
insta = "1.43"
insta-cmd = "0.6"
libtest-mimic = "0.8.1"
similar-asserts = "1.7"
tempfile = "3"
toml = "0.8"

tinymist-world = { version = "0.13.12", default-features = false, features = [
  "system",
] }

typst-assets = { version = "0.13.1", features = ["fonts"] }
typst-render = "0.13.1"
typst = "0.13.1"

# Used in benchmark
criterion = { version = "0.5" }

# Build
vergen = { version = "9.0", features = ["build", "cargo", "rustc"] }
vergen-gitcl = { version = "1.0" }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.test]
opt-level = 1

[profile.ci]
inherits = "release"
debug = true

[patch.crates-io]
# tinymist-world = { git = "https://github.com/Myriad-Dreamin/tinymist", rev = "84569fb98c4eeea65d91677c31d803718143fc10" }
