[project]
name = "typstyle-docs"
version = "0.1.0"
description = "Documentation for Typstyle"
authors = [{ name = "mgt", email = "mgt@oi-wiki.org" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[dependency-groups]
dev = [
  "mkdocs-material[imaging]>=9.5.26",
  "markdown-exec[ansi]>=1.8.3",
  "mkdocs-meta-descriptions-plugin>=3.0.0",
]
