[package]
name = "typstyle-tests"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[[test]]
name = "tests"
path = "src/tests.rs"
harness = false

[features]
default = ["consistency"]
consistency = ["typstyle-consistency"]

[dependencies]
typstyle-core.workspace = true
typstyle-consistency = { workspace = true, optional = true }

anyhow.workspace = true
serde.workspace = true
toml.workspace = true
typst-syntax.workspace = true

console.workspace = true
insta.workspace = true
libtest-mimic.workspace = true
similar-asserts.workspace = true
