[package]
name = "typstyle-consistency"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[lib]
test = false
doctest = false
bench = false
doc = false

[dependencies]
anyhow.workspace = true
walkdir.workspace = true
rustc-hash.workspace = true

tinymist-world.workspace = true
typst-assets.workspace = true
typst-render.workspace = true
typst.workspace = true
