[package]
name = "typstyle-core"
description = "A pretty printer for typst."
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
bench = false

[[bench]]
name = "pretty_print"
harness = false

[dependencies]
typst-syntax.workspace = true

ecow.workspace = true
itertools.workspace = true
pretty.workspace = true
rustc-hash.workspace = true
serde = { workspace = true, optional = true }
smallvec.workspace = true
thiserror.workspace = true
wasm-bindgen = { workspace = true, optional = true }

[dev-dependencies]
insta.workspace = true
criterion.workspace = true

[features]
serde = ["dep:serde"]
wasm = ["wasm-bindgen"]
