[package]
name = "typstyle-typlugin"
publish = false
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Embedded Typstyle for Typst"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib"]
bench = false

[dependencies]
typstyle-core = { workspace = true, features = ["serde"] }
typst-syntax.workspace = true

serde_json.workspace = true
wasm-minimal-protocol = { git = "https://github.com/astrale-sharp/wasm-minimal-protocol" }
